feat(history): enable server to perform HardDelete for history
